deployment/kubernetes/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: biological-production
  labels:
    name: biological-production
    environment: production
